--- a/se491project/war/Se491project.html
+++ b/se491project/war/Se491project.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Welcome to Virtual Classroom</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -44,7 +44,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Welcome to Virtual Classroom</h1>
 
     <table align="center">
       <tr>
