some changes in the page layout of the chat

--- a/se491project/war/chat.html
+++ b/se491project/war/chat.html
@@ -7,7 +7,10 @@
 	</head>
 	 
 	<body onload="getSessionInfo()">
-		<div id="myPublisherDiv"></div>
+		<div id="conferenceContainer">
+			<div id="myPublisherDiv"></div>
+			<div id="subscribers"></div>
+		</div>
 		<div id="myDiv">
 			<button type="button" onclick="endOpenTokSession()">Close session</button>
 		</div>
