--- a/se491project/war/index.html
+++ b/se491project/war/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <h2> Student Registration </h2>
-    <form action = "se491_vcproj" method = "GET">
+    <form action = "se491_vcproj" method = "POST">
     	<p>
     	<label>Last Name</label>
     	<input type = "text" name = "lastname" size = "25"/>
