Form Controller correctly called by form but stil need to create class logic in conroller

--- a/se491project/war/index.html
+++ b/se491project/war/index.html
@@ -22,7 +22,7 @@
 			if (userService.isUserLoggedIn()) {
 		%>
 		<ul class=menu>
-			<li><a href="/ClassCreate.html">Create Class</a></li>
+			<li><a href="/ClassCreate.jsp">Create Class</a></li>
 			<li><a href="/ClassSearch.html">Class Search</a></li>
 		</ul>
 		<%
@@ -42,7 +42,7 @@
 			} else {
 		%>
 		<ul class=menu>
-			<li><a href="/ClassCreate.html">Create Class</a></li>
+			<li><a href="/ClassCreate.jsp">Create Class</a></li>
 			<li><a href="/ClassSearch.html">Class Search</a></li>
 		</ul>
 
@@ -62,7 +62,7 @@
 					<a href="/ClassSearch.html">Class Search</a>
 				</div>
 				<div class="grid_4">
-					<a href="/ClassCreate.html">Create Class</a>
+					<a href="/ClassCreate.jsp">Create Class</a>
 				</div>
 			</li>
 		</ul>
