--- a/se491project/war/WEB-INF/jsp/errors/errorjavaexception.html
+++ b/se491project/war/WEB-INF/jsp/errors/errorjavaexception.html
@@ -1,2 +1,2 @@
-An error has occurred while processing your request. 
-Please try the process again and if the error persist contact the help desk at helpdesk@virtualclassrom.com 
+An error has occurred while processing your request.<br> 
+Please try the process again and if the error persist contact the help desk at helpdesk@virtualclassroom.com 
