--- a/se491project/war/WEB-INF/jsp/errors/error404.html
+++ b/se491project/war/WEB-INF/jsp/errors/error404.html
@@ -1,1 +1,16 @@
-The page you requested was not found.
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+
+<div class="container">
+	<div class="alert alert-error" id="error">
+		<button type="button" class="close" data-dismiss="alert">&times;</button>
+		<h4>Error!</h4>
+		<p>404 - Page not found!</p>
+	</div>
+	<script src="/javascript/bootstrap.min.js"></script>
+	<script src="/javascript/bootstrap.js"></script>
+	<script>
+		$('.close').on('click', function() {
+			$('.alert').alert('close');
+		});
+	</script>
+</div>
